tests/ui/parser/better-expected.stderr
error: expected `;` or `]`, found `3`
  --> $DIR/better-expected.rs:2:19
   |
LL |     let x: [isize 3];
   |                   ^ expected `;` or `]`
   |
help: you might have meant to use `;` as the separator
   |
LL |     let x: [isize; 3];
   |                  +

error: aborting due to 1 previous error

